--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
                     <div class="header__title">
                         <h1>Find your custom matched commercial real estate space.</h1>
                         <p>In oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat, quo pertineant ero tibique</p>
+
+                        <form action="" class="form form--active">
+                            <label class="form__label">
+                                <input type="text" class="form__input" placeholder="Your email address">
+                                <button class="form__button button">Subscribe</button>
+                            </label>
+                        </form>
                     </div>
+
                 </div>
                 <div class="header__img">
                     <img src="/img/header/img.jpg" alt="Real estate space">
