--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <h1>Find your custom matched commercial real estate space.</h1>
                         <p>In oculis quidem exercitus quid ex ea consequatur? autem vel eum fugiat, quo pertineant ero tibique</p>
 
-                        <form action="" class="form form--active">
+                        <form action="" class="form">
                             <label class="form__label">
                                 <input type="text" class="form__input" placeholder="Your email address">
                                 <button class="form__button button">Subscribe</button>
@@ -54,6 +54,7 @@
             </div>
         </div>
     </header>
+    <script src="/js/main.js"></script>
 </body>
 </html>
 
